# DataScience_project

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
DataScience/: example.py  start_ds.py
DataScience/data/: 1.jfif
DataScience/models/: ocr_model_weights.h5  plate_detect_model.tflite
DataScience/plate_detect_models/: license_plate_detector.pt
app/: main.py
app/core/: config.py
app/data_science/: auto_detector.py  character_recogniser.py  detector.py  license_plate_detector.py
app/db/: database.py
app/ds_models/: detect_plate.tflite  license_plate_detector.pt  plate_detect_model_best.tflite  plate_detect_model_new.tflite
app/models/: __init__.py  black_list.py  cars.py  parking.py  payments.py  paymets.py  rate.py  transactions.py  users.py
app/repositories/: black_list.py  cars.py  parking.py  parkings.py  payments.py  rates.py  transactions.py  users.py
app/routers/: all.py  auth.py  black_list.py  cars.py  checkers.py  me.py  parking.py  payment.py  payments.py  rates.py  transactions.py  users.py
app/schemas/: auth.py  black_list.py  cars.py  parking.py  payment.py  rates.py  transactions.py  users.py
app/services/: auth.py  black_list.py  cars.py  license_plate_detector_base.py  parking.py  parkings.py  payment.py  payments.py  plate_service.py  rates.py  transactions.py  users.py
app/utils/: dependencies.py  exceptions.py  guard.py  repositories.py  unitofwork.py
csv/: AA7777CH_20240826_135934.csv  AA7777CH_20240826_140417.csv  string10_20240826_203237.csv
docs/: conf.py
docs/source/: conf.py  index.rst
docs/stubs/: character_recogniser.py  detector.py
fastapi-frontend/: package-lock.json  package.json
fastapi-frontend/src/: App.js
fastapi-frontend/src/components/: AuthorizedRequest.js  Login.js  Signup.js
migration/: env.py
migration/versions/: 0a4299b58a2f_initial_migration.py  3b0aa9de5e09_add_payment.py  603f573514e2_ref_rate_parking.py  8001161965ea_pay_parging_null.py  a5fefb596829_init.py  d6b4d8dde650_ref_parkings3.py  d98e5af6fee9_add_parking_is_active.py  e9055442740b_ref_parkings4.py  fb6de44f1b1c_ref_parkings.py
migration/versions1/: 717c97328bbd_add_car_model.py  8e81192d197f_ref_parkings2.py  be9f4a30585b_ref_rate_cars.py  ca0a8ff80dea_ref_duration_parking.py  cc83db60169e_add_parking_table.py  f31d68fd695d_init1.py
