[tool.poetry]
name = "datascience-project"
version = "0.1.0"
description = ""
authors = ["SergRusetskiy1974 <sergrus1974@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
tensorflow-io-gcs-filesystem = "0.31"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"
matplotlib = "3.7.0"
kiwisolver = "1.4.5"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
#pydantic = "^2.8.2"
h5py = "^3.11.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
email-validator = "^2.2.0"
python-jose = "^3.3.0"
h5py = "^3.11.0"
passlib = "^1.7.4"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pre-commit = "^3.8.0"
mypy = "^1.11.1"


[tool.poetry.group.tensorflow.dependencies]
tensorflow = {version = "^2.13.0" }
#tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
