[tool.poetry]
name = "datascience-project"
version = "0.1.0"
description = ""
authors = ["SergRusetskiy1974 <sergrus1974@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
opencv-python = "^4.10.0.84"
matplotlib = "3.7.0"
kiwisolver = "1.4.5"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
#pydantic = "^2.8.2"
pydantic = {extras = ["email"], version = "^2.8.2"}
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pre-commit = "^3.8.0"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
