[tool.poetry]
name = "datascience-project"
version = "0.1.0"
description = ""
authors = ["SergRusetskiy1974 <sergrus1974@gmail.com>"]
# package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
opencv-python-headless = { version = "^4.9.0.80", platform = "linux" }
opencv-python = { version = "^4.9.0.80", platform = "win32 || darwin" }
matplotlib = "^3.8.4"
tensorflow-io-gcs-filesystem = [
    { version = ">=0.31,<0.32", markers = "sys_platform == 'win32'" },
    { version = "~0.37", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
tensorflow = [
    { version = "~2.15", markers = "sys_platform == 'win32'" },
    { version = "^2.16.1", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
keras = [
    { version = "~2", markers = "sys_platform == 'win32'" },
    { version = "^3.3.3", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
]
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
#tensorflow-io-gcs-filesystem = "0.31"
#opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"
#matplotlib = "3.7.0"
kiwisolver = "1.4.5"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
#pydantic = "^2.8.2"
h5py = "^3.11.0"
pydantic = { extras = ["email"], version = "^2.8.2" }
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
sphinx = "^8.0.2"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
pre-commit = "^3.8.0"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
sphinx = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
